created First screen block

--- a/index.html
+++ b/index.html
@@ -23,6 +23,28 @@
     </header>
     <!-- /header block -->
 
+    <section class="first__screen">
+        <div class="container">
+            <div class="first__screen-wrapper">
+                <figcaption class="screen__name">
+                    <span>Denis Novik</span>
+                </figcaption>
+                <figure>
+                    <img src="./Pictures/photoDenisNovik.jpg" alt="DenisNovik_photo" class="first__screen-img">
+                </figure>
+            </div>
+            <!-- /first__screen-wrapper -->
+        </div>
+        <!-- /container -->
+    </section>
+
+    <section class="about">
+        <div class="abot__wrapper">
+
+        </div>
+    </section>
+    
+
 
 <body>
     
