created About me block

--- a/index.html
+++ b/index.html
@@ -39,10 +39,17 @@
     </section>
 
     <section class="about">
-        <div class="abot__wrapper">
-
+        <div class="container">
+            <div class="about__me">
+                <h2 class="title">About me</h2>
+                <p class="text">Hi, I'm Denis – UX/UI designer from Minsk. I'm interested in design and everything connected with it. 
+                <p class="text">I'm studying at courses "Web and mobile design interfaces" in IT-Academy.</p>
+                <p class="text"> Ready to implement excellent projects with wonderful people.</p>
+            </div>
         </div>
+
     </section>
+        
     
 
 
