created Footer block

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     
     <section class="skills">
         <div class="container">
-            <div class="skills__title">
+            <div class="title">
                 <h2>Skills</h2>
                 <p>I work in such programs as</p>
             </div>
@@ -164,7 +164,31 @@
         <!-- /container -->
     </section>
 
-
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__block">
+                <div class="title">
+                    <h2>Contacts</h2>
+                    <p>Want to know more or just chat? You are welcome!</p>
+                </div>
+                <div class="button">
+                    <button class="btn">Send message</button>
+                </div>
+                <div class="footer__link">
+                    <a href="#"><img src="./Pictures/linkedin.svg" alt="linkedin_icon"></a>
+                    <a href="#"><img src="./Pictures/inst.svg" alt="instagram_icon"></a>
+                    <a href="#"><img src="./Pictures/be.svg" alt="behance_icon"></a>
+                    <a href="#"><img src="./Pictures/Vector.svg" alt="dribble_icon"></a>
+                </div>
+                <div class="footer__end">
+                    <p>Like me on<br> LinkedIn, Instagram, Behance,<br> Dribble</p>
+                </div>
+            </div>
+            <!-- /footer__block -->
+        </div>
+        <!-- /container -->
+    </footer>
+    <!-- /footer -->
 <body>
     
 </body>
